{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 70,
  "lineage": "622b6d7f-d794-336a-57b8-f62d52d271d6",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.83.170",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Standard",
            "tags": {
              "environment": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-0A-5A-A1",
            "name": "mtc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "eastus",
            "name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.83.170",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "resource_group_name": "mtc-resources",
            "virtual_network_name": "mtc-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-subnet-sg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "df88fa63-81b7-46bd-b3b8-01f7671d8a15",
            "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "eastus",
            "name": "mtc-network",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "security_group": "/subscriptions/a63a3083-3f96-45be-92dd-103e88bc1334/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}